k8s-example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-backend
  namespace: default
  labels:
    app: ingress-backend
spec:
  type: NodePort
  ports:
    - port: 80
      name: default
    - port: 8080
      name: livenessprobe
  selector:
    app: ingress-backend
